--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -7,8 +7,11 @@ services:
       - /var/lib/postgresql/data/
     env_file:
       - ./.env
+
   web:
-    build: .
+    build:
+      context: ../
+      dockerfile: api_yamdb/Dockerfile
     restart: always
     volumes:
       - static_value:/app/static/
@@ -22,8 +25,10 @@ services:
     image: nginx:1.21.3-alpine
     ports:
       - "80:80"
+
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - $PWD/../api_yamdb/templates:/var/html/redoc/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
 
@@ -33,4 +38,3 @@ services:
 volumes:
   static_value:
   media_value:
-
