--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -17,7 +17,7 @@ jobs:
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 
-        pip install -r api_yamdb/requirements.txt 
+        pip install -r yamdb/requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
@@ -43,7 +43,7 @@ jobs:
         with:
           push: true
           tags: frodo80/yamdb:latest
-          file: api_yamdb/Dockerfile
+          file: yamdb/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
@@ -60,7 +60,7 @@ jobs:
         script: |
           sudo docker-compose stop
           sudo docker-compose rm web
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
