--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -17,7 +17,7 @@ jobs:
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 
-        pip install -r yamdb/requirements.txt 
+        pip install -r api_yamdb/requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
