--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,9 +9,7 @@ services:
       - ./.env
 
   web:
-    build:
-      context: ../
-      dockerfile: yamdb/Dockerfile
+    image: frodo80/yamdb:v1.23.05.2023
     restart: always
     volumes:
       - static_value:/app/static/
@@ -28,7 +26,6 @@ services:
 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - $PWD/../yamdb/templates:/var/html/redoc/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
 
