--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           push: true
           tags: frodo80/yamdb:latest
-          file: yamdb/Dockerfile
+          file: api_yamdb/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
