--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip 
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        pip install flake8 
         pip install -r api_yamdb/requirements.txt 
 
     - name: Test with flake8 and django tests
@@ -60,7 +60,7 @@ jobs:
         script: |
           sudo docker-compose stop
           sudo docker-compose rm web
-          sudo docker pull ${{ secret.DOCKER_USERNAME }}/yamdb
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
