--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - ./.env
 
   web:
-    image: frodo80/yamdb:v1.23.05.2023
+    image: frodo80/yamdb:latest
     restart: always
     volumes:
       - static_value:/app/static/
